--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- Background music -->
   <audio autoplay loop>
-    <source src="happy-birthday.mp3" type="audio/mpeg">
+    <source src="/happy-birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
