--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
       <img src="5.jpg" alt="Elizabeth photo 5">
       <img src="6.jpg" alt="Elizabeth photo 6">
       <img src="7.jpg" alt="Elizabeth photo 7">
+      <img src="8.jpg" alt="Elizabeth photo 8">
+      <img src="9.jpg" alt="Elizabeth photo 9">
+      <img src="10.jpg" alt="Elizabeth photo 10">
+      <img src="11.jpg" alt="Elizabeth photo 11">
+      <img src="12.jpg" alt="Elizabeth photo 12">
+      <img src="13.jpg" alt="Elizabeth photo 13">
+      <img src="14.jpg" alt="Elizabeth photo 14">
+      <img src="15.jpg" alt="Elizabeth photo 15">
+      <img src="16.jpg" alt="Elizabeth photo 16">
+      <img src="17.jpg" alt="Elizabeth photo 17">
+      <img src="18.jpg" alt="Elizabeth photo 18">
+      <img src="19.jpg" alt="Elizabeth photo 19">
+
       <img src="1.jpg" alt="Elizabeth photo 1">
       <img src="2.jpg" alt="Elizabeth photo 2">
       <img src="3.jpg" alt="Elizabeth photo 3">
@@ -73,6 +86,18 @@
       <img src="5.jpg" alt="Elizabeth photo 5">
       <img src="6.jpg" alt="Elizabeth photo 6">
       <img src="7.jpg" alt="Elizabeth photo 7">
+      <img src="8.jpg" alt="Elizabeth photo 8">
+      <img src="9.jpg" alt="Elizabeth photo 9">
+      <img src="10.jpg" alt="Elizabeth photo 10">
+      <img src="11.jpg" alt="Elizabeth photo 11">
+      <img src="12.jpg" alt="Elizabeth photo 12">
+      <img src="13.jpg" alt="Elizabeth photo 13">
+      <img src="14.jpg" alt="Elizabeth photo 14">
+      <img src="15.jpg" alt="Elizabeth photo 15">
+      <img src="16.jpg" alt="Elizabeth photo 16">
+      <img src="17.jpg" alt="Elizabeth photo 17">
+      <img src="18.jpg" alt="Elizabeth photo 18">
+      <img src="19.jpg" alt="Elizabeth photo 19">
     </div>
   </div>
 
