width correction and animation correction

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     .slider {
       display: flex;
-      width: 200%;
+      width: max-content;
       animation: scroll 30s linear infinite;
     }
 
