--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
   </div>
 
   <div class="mt-10 text-gray-700">
-    <p class="text-xl font-medium">With all my love, always 💕</p>
+    <p class="text-xl font-medium">With all Our love, always,</p>
+    <p class="text-xl font-medium">Your siblings 💕</p>
   </div>
 
 </body>
